# ATM

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp
Include/: ATM.h  interfaces.h
lib/: checkoutATM.h
src/: checkoutATM.h  main.cpp
src/lib/: checkoutATM.h
